--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@ body {
   text-decoration: none;
   color: white;
   font-size: 1.5rem;
+  font-weight: bold;
+  display: flex;
+    align-items: center;
 }
 
 /* Burger Menu */
